<resources>
    <string name="app_name">GitHub API Users</string>
    <string name="github_mascot">GitHub Mascot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signout">Sign Out</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="username">Username: </string>
    <string name="name">Name: </string>
    <string name="repositories">Repositories:</string>
    <string name="gists">Gists:</string>
    <string name="followers">Followers:</string>
    <string name="following">Following:</string>
</resources>
