<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.profilescreen.ProfileFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/avatar_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.558"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars[0]"/>

                <TextView
                        android:id="@+id/titleUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/username"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/titleName"
                        app:layout_constraintEnd_toStartOf="@+id/tvUsername"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="textStart"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/tvName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/titleUsername"
                        app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/titleName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/name"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/titleRepos"
                        app:layout_constraintEnd_toStartOf="@+id/tvName"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleUsername"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/tvName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="textStart"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/tvRepos"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/titleName"
                        app:layout_constraintTop_toBottomOf="@+id/tvUsername"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/titleRepos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/repositories"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/titleGists"
                        app:layout_constraintEnd_toStartOf="@+id/tvRepos"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleName"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/tvRepos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="textStart"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/tvGists"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/titleRepos"
                        app:layout_constraintTop_toBottomOf="@+id/tvName"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/titleGists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/gists"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/titleFollowers"
                        app:layout_constraintEnd_toStartOf="@+id/tvGists"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleRepos"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/tvGists"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="textStart"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/tvFollowers"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/titleGists"
                        app:layout_constraintTop_toBottomOf="@+id/tvRepos"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/titleFollowers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/followers"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/titleFollowing"
                        app:layout_constraintEnd_toStartOf="@+id/tvFollowers"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleGists"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/tvFollowers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="textStart"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@+id/tvFollowing"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/titleFollowers"
                        app:layout_constraintTop_toBottomOf="@+id/tvGists"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/titleFollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/following"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleFollowers"
                        app:layout_constraintVertical_chainStyle="packed"/>

                <TextView
                        android:id="@+id/tvFollowing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:textAlignment="textStart"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/titleFollowing"
                        app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
                        app:layout_constraintVertical_chainStyle="packed"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>